<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/new_session"
        android:orderInCategory="1"
        android:title="@string/new_session"/>
    <item
        android:id="@+id/thought_log"
        android:orderInCategory="2"
        android:title="@string/thought_log"/>
    <item
        android:id="@+id/tips"
        android:orderInCategory="3"
        android:title="@string/tips"/>
    <item
        android:id="@+id/word_fix"
        android:orderInCategory="4"
        android:title="@string/word_fix"/>
    <item
        android:id="@+id/setdelay"
        android:orderInCategory="5"
        android:title="@string/setdelay"/>
    <item
        android:id="@+id/response_types"
        android:orderInCategory="6"
        android:title="@string/response_types"/>
    <item
        android:id="@+id/erase_brain"
        android:orderInCategory="7"
        android:title="@string/erase_memory"/>
    <item
        android:id="@+id/speech"
        android:orderInCategory="8"
        android:title="@string/speech_off"/>
    <item
        android:id="@+id/advanced"
        android:orderInCategory="9"
        android:title="@string/advanced_off"/>
    <item
        android:id="@+id/exit_app"
        android:orderInCategory="10"
        android:title="@string/exit_app"/>
</menu>
